amf-cli/shared/src/test/resources/parser-results/raml/error/discriminator_union.raml
#%RAML 1.0
title: Api With Warnings

types:
  Person:
    type: object
    properties:
      name: string
      kind: string
  Employee:
    type: Person
    properties:
      employeeId: string
  User:
    type: Person
    properties:
      userId: string
  PersonOrDog:
   type: Person | Employee | User
   discriminator: hasTail